<resources>
    <string name="app_name">DoggyDoo</string>

    <!--    textview strings-->
    <string name="skipLogin"><u>Skip Login</u></string>
    <string name="sendCode">Send Code</string>
    <string name="phoneNo">Phone No.</string>
    <string name="verify">Verify</string>
    <string name="resendOtp"><u>Resend OTP</u></string>
    <string name="next">Next</string>
    <string name="tell_us_your_name">Tell us your name!</string>
    <string name="your_name">Your name</string>
    <string name="skip"><u>Skip</u></string>
    <string name="tell_us_about_your_pooch">Tell us about your pooch!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="time_text">25th Jan 2021,10:32pm</string>
    <string name="review_name">Jasvinder Kaur</string>
    <string name="demo_text">Lorem Ipsum is simply dummy text Lorem Ipsum has been the industry\'s standard ..</string>
    <string name="are_you_sure_you_want_to_check_in">Are you sure you want to check-in?</string>
    <string name="yes_i_am">Yes I am!</string>
    <string name="not_now">Not now</string>
    <string name="your_review">Your Review</string>
    <string name="type_a_message">Type a message</string>
    <string name="todo">TODO</string>
    <string name="my_friends">My Friends</string>
    <string name="my_pets">My Pets</string>
    <string name="new_updates">New Updates</string>
    <string name="adoption_king">Adoption King</string>
    <string name="dogsitter_champ">Dogsitter Champ</string>
    <string name="dogsitting">Dogsitting</string>
    <string name="foresting">Foresting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="credit_debit_cards">Credit/Debit Cards</string>
    <string name="add_card">+Add Card</string>
    <string name="upi">UPI</string>
    <string name="add_upi">+Add UPI</string>
    <string name="add_wallet">+Add Wallet</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="demo_number">XXXX XXXX XXXX 4123</string>
    <string name="remove_card">Remove Card</string>
    <string name="adoption">Adoption</string>
    <string name="where_are_you_looking_for">Where are you looking for?</string>
    <string name="bruno">Bruno</string>
    <string name="post_adoption">Post Adoption</string>
    <string name="vaccinated">Vaccinated</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="call_a_wet">Find a vet</string>
    <string name="nearby_doctors">Nearby Doctors</string>
    <string name="neaby_hospitals">Nearby Hospitals</string>
    <string name="select_time_date"><![CDATA[Select Time & Date]]></string>

    <string-array name="picker">
        <item>Below 1</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string-array name="weight_picker">
        <item>Below 1</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>Above 60</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="call_doc">Call this Doctor</string>
    <string name="call_clinic">Call this Clinic</string>
    <string name="google_map_api_key">AIzaSyDLoE5-MCJ0Gl-q4V-5-4udXrmGiyLZxoc</string>
    <string name="default_notification_channel_id">doggydoo</string>
    <string name="adoption_guide">Want to put up a nearby dog for adoption? Simply <font color="#5935D5">add them in your profile as your pet and switch the bottom toggle of adoption.</font></string>
    <string name="adoption_guide1">This way you will be opting for your dog to be available for adoption to parents looking for adopting!</string>
    <string name="adoption_guide2"><font color="#F9BBC4">Reference image</font></string>
    <string name="lost_found_section"><![CDATA[Lost & found section]]></string>
    <string name="type_message">Type message</string>
    <string name="this_feature_will">This feature will enable you to help a doggo spotted in distress by sending the location to nearby rescue medical teams &amp; shelter volunteers. <br><br>Choose either of the options to flag a dog in distress.\n</br></br></string>
    <string name="sends_your">Sends your current location, so you may leave the area while marking it for heroes able to help.</string>
    <string name="manually_drop">Manually drop a pin not restricted to location, stay anywhere and help mark the dogs in need of rescue or medical help.</string>
    <string name="agree_to_distress">Agree to <font color="#5935D5"><u>Distress Dog Terms &amp; Conditions.</u></font></string>
    <string name="stof_nbys">Send to friends, nearby Shelters &amp; Volunteers (Recommended)</string>
    <string name="send_to_friend">Send to friends</string>
    <string name="distress_location">Distress location was sent to the nearby rescue medical teams &amp; shelter volunteers.</string>
    <string name="you_are_a_true_hero">You are a true hero! We have also recommended your profile for DoggyDoo Heroes Badge.</string>
    <string name="thank_you_for">Thank you for making this a better place for our four legged friends.</string>
    <string name="are_you_sure_you">Are you sure you want to put up a notification for a dog in distress? if yes, select yes and continue.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="paragraph1">What is DoggyDoo mobile application about</string>
    <string name="paragraph2">Doggy Doo is an environment for canine lovers. It is a functional virtual network of canine parents aiming to simplify and improve their canine parenting life, helping them to spend more quality time with their beloved furry best friend. \n\nDoggy Doo is a platform that can make it easier than ever to schedule your dog play dates, line up veterinarian visits, or even find someone to watch your dogs while you spend a weekend away.</string>
    <string name="paragraph3">How do I put my dog for adoption?</string>
    <string name="paragraph4">We firmly believe all dogs belong in a home with a loving family. To put your dog for adoption: \n\n - Go to profile \n - click on Pets profile \n - Tap &quot;Adoption Toggle/Switch&quot; &amp; agreeing terms. \n - upon successful adoption pet shall be transferred to adoption parent. </string>
    <string name="paragraph5">How do I create my playdate?</string>
    <string name="paragraph6">To create a pawsome PlayDate for your furry best friend: \n - Go to the playdate module \n - Select nearby pet \n - Select Date Time \n - Wait for playdate request approval. \n - upon approval notification, we are all set for an amazing playdate!</string>
    <string name="paragraph7">Where do I report an issue?</string>
    <string name="paragraph8">If you notice that something on DoggyDoo isn\'t working correctly, such as a broken feature or a technical problem, try updating the app. If it\'s still not working after updating, you can report it to us. Make sure that you include as much detail about the problem as possible in your report. Information such as the kind of phone or tablet you were using, what you were doing when the problem occurred and adding a screenshot may help us address the issue. \n\nTo Report a problem, email us at developer.doggydoo@gmail.com. Reporting issues when they happen helps make DoggyDoo better, and we appreciate the time it takes to give us this information.</string>
    <string name="paragraph9">How is my privacy protected?</string>
    <string name="paragraph10">We pay close attention to all Data Protection regulations and are totally obsessed with securing your privacy and confidentiality. Everything you tell your instructor is protected by data protection legislation.\n\n</string>

    <string name="navigate">Navigate</string>
    <string name="view_my_thread">View My Thread</string>


</resources>