<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="15dp"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@mipmap/back_icon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/medium"
            android:text="Dog Distress Pin"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:text="SOS"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/this_feature_will"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radio_group1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RadioButton
                android:id="@+id/send_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:buttonTint="@color/on_boarding_blue"
                android:text="@string/stof_nbys"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/send_to_frd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:buttonTint="@color/on_boarding_blue"
                android:text="@string/send_to_friend"
                android:textSize="16sp" />

            </RadioGroup>
            <TextView
                android:id="@+id/tvCurrentLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/accept_bg"
                android:elevation="10dp"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:padding="12dp"
                android:text="Send Current Location"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/sends_your"
                android:textSize="16sp"
                android:textStyle="italic" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>


            <TextView
                android:id="@+id/tvDropPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_bg"
                android:elevation="10dp"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:padding="12dp"
                android:text="Drop pin marker on map"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/manually_drop"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/regular"
                android:text="Meanwhile we Recommend,\na) Take Action within first 48 hrs.\nb) Make sure to check last-seen or heard location thoroughly.\nc) Look for cctv footage.\nd) Ask nearby vendors &amp; also share on every known platform."
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/regular"
                android:textStyle="bold"
                android:text="Are you sure you want to put up a notification for lost dog in vicinity? if yes, select yes and continue."
                android:textColor="@color/black"
                android:textSize="18sp" />


            <RadioButton
                android:id="@+id/rbCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/regular"
                android:buttonTint="@color/on_boarding_blue"
                android:text="@string/agree_to_distress"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>