<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aks.doggydoo.homemodule.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/nav_home_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_notification"
            app:destination="@id/nav_notification" />
        <action
            android:id="@+id/action_nav_home_to_nav_setting"
            app:destination="@id/nav_setting" />
        <action
            android:id="@+id/action_nav_home_to_myFriendsFrag"
            app:destination="@id/myFriendsFrag" />
        <action
            android:id="@+id/action_nav_home_to_paymentFrag"
            app:destination="@id/paymentFrag" />
       <!-- <action
            android:id="@+id/action_nav_home_to_requestFrag"
            app:destination="@id/requestFrag" />-->

    </fragment>

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.aks.doggydoo.homemodule.ui.NotificationFrag"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.aks.doggydoo.homemodule.ui.SettingFrag"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/myFriendsFrag"
        android:name="com.aks.doggydoo.homemodule.ui.MyFriendsFrag"
        android:label="fragment_my_friends"
        tools:layout="@layout/fragment_my_friends" />

    <fragment
        android:id="@+id/paymentFrag"
        android:name="com.aks.doggydoo.homemodule.ui.PaymentFrag"
        android:label="fragment_payment"
        tools:layout="@layout/fragment_payment" />

  <!--  <fragment
        android:id="@+id/requestFrag"
        android:name="com.aks.doggydoo.homemodule.ui.RequestFrag"
        android:label="fragment_request"
        tools:layout="@layout/fragment_request" />-->
    <fragment
        android:id="@+id/UpcomingFrag"
        android:name="com.aks.doggydoo.homemodule.ui.UpcomingFrag"
        android:label="UpcomingFrag" />

</navigation>