<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10sp"
    android:paddingTop="10sp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/vaccinated" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/profileImage"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/reviewTime"
                android:fontFamily="@font/bold"
                android:text="@string/review_name"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/reviewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/regular"
                android:text="@string/time_text"
                android:textColor="#979797"
                android:textSize="10sp" />

        </RelativeLayout>

        <RatingBar
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:id="@+id/rate"
            android:layout_height="wrap_content"
            android:progressTint="#FFC600"
            android:rating="3.4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comment"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/regular"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:text="@string/demo_text"
            android:textColor="#9E9E9E"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>