<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:animateLayoutChanges="true"
    android:background="@color/on_boarding_bg"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_above="@+id/button"
        android:layout_centerInParent="true"/>

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        android:layout_marginStart="20dp"
        android:src="@mipmap/back_icon"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="Upload your picture!"
        android:textColor="@color/on_boarding_tite_text"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/gifImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/getImageFromGallery"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_group_9807" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/cal"
        android:fontFamily="@font/bold"
        android:paddingLeft="35dp"
        android:paddingTop="10dp"
        android:paddingRight="35dp"
        android:paddingBottom="10dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="10dp" />

    <ImageView
        android:id="@+id/i"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:src="@drawable/login_white_rec" />


    <TextView
        android:id="@+id/underlyingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:background="?selectableItemBackground"
        android:fontFamily="@font/regular"
        android:padding="10dp"
        android:text="@string/skip"
        android:textColor="@color/cal"
        android:textSize="12sp" />


</RelativeLayout>